--- a/video_player.html
+++ b/video_player.html
@@ -7,6 +7,6 @@
     <title>Rajaraj.com</title>
 </head>
 <body>
-       <video src="Lori.mp4"></video>
+       <video src="Lori.mp4" controls height="500px" width="1000px" ></video>
 </body>
 </html>
