This is a video player made by Raja raj

--- a/video_player.html
+++ b/video_player.html
@@ -8,5 +8,6 @@
 </head>
 <body>
        <video src="Lori.mp4" controls height="500px" width="1000px" ></video>
+       <img src="Jetha.png" alt="Error code 404">
 </body>
 </html>
