--- a/video_player.html
+++ b/video_player.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajaraj.com</title>
+    <link rel="stylesheet" href="Raja.css">
+    <h1>Hello welcome to Raja web</h1>
 </head>
 <body>
-       <video src="Lori.mp4" controls height="500px" width="1000px" ></video>
-       <img src="Jetha.png" alt="Error code 404">
+    
 </body>
 </html>
