This is changed file2

--- a/video_player.html
+++ b/video_player.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajaraj.com</title>
     <link rel="stylesheet" href="Raja.css">
-    <h1>Hello welcome to Raja web</h1>
-    <h2>This website is made for hacking purposes</h2>
+    <script src="Raja.js" async defer></script>
 </head>
 <body>
-    
+    <!--<img src="Jetha.png" alt="Error code 404">
+    <video src="Lori.mp4" controls height="500px" width="1000px"></video>-->
+    <a href="http://Rajaraj.com"> Raja raj website</a>
+    <h1>Hello welcome to Raja web</h1>
+    <h2>This website is made for hacking purposes</h2>
 </body>
 </html>
