--- a/video_player.html
+++ b/video_player.html
@@ -9,13 +9,13 @@
     <script src="Raja.js" async defer></script>
 </head>
 <body>
-    <!--<img src="Jetha.png" alt="Error code 404">
-    <video src="Lori.mp4" controls height="500px" width="1000px"></video>-->
-    <audio controls>
-    <source src="test.mp3" type="audio/mpeg">
-    </audio>
-    <a href="http://Rajaraj.com"> Raja raj website</a>
     <h1>Hello welcome to Raja web</h1>
     <h2>This website is made for hacking purposes</h2>
+    <a href="http://Rajaraj.com"> Raja raj website</a>
+    <audio controls>
+        <source src="test.mp3" type="audio/mpeg">
+    </audio>
+    <video src="Lori.mp4" controls height="500px" width="1000px"></video>
+    <img src="Jetha.png" alt="Error code 404">
 </body>
 </html>
